Project and resume

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
           <p>I’m an Electronics and Communication Engineering student interested in embedded systems, IoT, and applied Machine Learning. I love solving real-world problems by combining hardware and software.</p>
           <p>Open to internships, industry-defined projects, and full-time opportunities.</p>
           <ul class="contact-list">
-            <li><a href="mailto:you@example.com">saikarthick070605@gmail.com</a></li>
-            <li><a href="https://github.com/Saikarthikss001" target="_blank" rel="noreferrer">github.com/Saikarthikss001</a></li>
-            <li><a href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noreferrer">linkedin.com/</a></li>
+            <li><a href="mailto:saikarthik0706@gmail.com">saikarthik0706@gmail.com</a></li>
+            <li><a href="https://github.com/saikarthik-ks" target="_blank" rel="noreferrer">github.com/saikarthik-ks</a></li>
+            <li><a href="https://www.linkedin.com/in/saikarthikss/" target="_blank" rel="noreferrer">linkedin.com/saikarthikss</a></li>
           </ul>
         </div>
         <div class="about-card">
           <div class="stat">
-            <span class="stat-num">3+</span>
+            <span class="stat-num">0</span>
             <span class="stat-label">Years</span>
           </div>
           <div class="stat">
-            <span class="stat-num">20+</span>
+            <span class="stat-num">5</span>
             <span class="stat-label">Projects</span>
           </div>
           <div class="stat">
@@ -79,10 +79,10 @@
             <div>
               <h3>Highlights</h3>
               <ul class="list">
-                <li>Skills: Python, C, Dart, JavaScript</li>
-                <li>Frameworks: Django, Flutter, MATLAB</li>
-                <li>Tools: Arduino, MySQL, VS Code, Git</li>
-                <li>Education: B.E. ECE – Your College (Year)</li>
+                <li>Skills: C, Python, Dart, HTML, CSS, JavaScript</li>
+                <li>Frameworks: TensorFlow, Keras, Matplotlib, NumPy</li>
+                <li>Tools: PyCharm, MySQL, VS Code, Flutter</li>
+                <li>Education: B.E. ECE – Bannari Amman Institute of Technology</li>
               </ul>
             </div>
           </div>
@@ -95,7 +95,7 @@
         <h2>Projects</h2>
         <div class="grid">
           <article class="card">
-            <h3>Bus Seating Management System</h3>
+            <h3>Liver Tumor Detection</h3>
             <div class="tags"><span>Flutter</span><span>Firebase</span><span>Dart</span></div>
             <details>
               <summary>Objective and Details</summary>
@@ -111,7 +111,7 @@
             </div>
           </article>
           <article class="card">
-            <h3>Monsoon Progress Monitoring</h3>
+            <h3>Analysis of Beamforming Algorithm Performance in Wireless Communication Systems</h3>
             <div class="tags"><span>Python</span><span>Pandas</span><span>Matplotlib</span></div>
             <details>
               <summary>Objective and Details</summary>
@@ -127,19 +127,18 @@
             </div>
           </article>
           <article class="card">
-            <h3>Liver Tumor Detection</h3>
-            <div class="tags"><span>Python</span><span>OpenCV</span><span>ML</span></div>
+            <h3>Soil Moisture Monitoring System</h3>
+            <div class="tags"><span>Arduino</span><span>Moisture Sensor</span><span>DC Motor</span></div>
             <details>
               <summary>Objective and Details</summary>
               <ul class="list">
-                <li><strong>Objective:</strong> Assist clinicians with segmentation and classification.</li>
-                <li><strong>Tools:</strong> OpenCV, scikit-learn, NumPy.</li>
-                <li><strong>Description:</strong> Preprocessing, region proposal, and classical ML classification; evaluated with F1/IoU metrics.</li>
+                <li><strong>Objective:</strong> To monitor and analyze soil moisture levels in real time for efficient irrigation and improved crop management.</li>
+                <li><strong>Tools:</strong> Arduino, Moisture Sensor, DC Motor.</li>
+                <li><strong>Description:</strong> A soil moisture monitoring system measures the water content in soil using sensors to provide real-time data. This helps optimize irrigation, conserve water, and enhance crop productivity.</li>
               </ul>
             </details>
             <div class="actions">
-              <a class="btn small" href="#" target="_blank" rel="noreferrer">Paper</a>
-              <a class="btn small" href="#" target="_blank" rel="noreferrer">GitHub</a>
+              <a class="btn small" href="https://github.com/saikarthik-ks/Soil-Moisture-Monitoring-System" target="_blank" rel="noreferrer">GitHub</a>
             </div>
           </article>
         </div>
@@ -203,32 +202,6 @@
               <a class="btn small" href="assets/certificates/ml-foundations.pdf" target="_blank" rel="noreferrer">View Certificate</a>
             </div>
           </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="internships" class="section internships">
-      <div class="container">
-        <h2>Internships / IDP / Mini Projects</h2>
-        <div class="card">
-          <ul class="list">
-            <li><strong>Royal Enfield – Chennai (Motorcycle Manufacturing)</strong> — Observed assembly line automation using PLCs. <em>Duration:</em> 1 Month</li>
-            <li><strong>IoT Home Automation (Mini Project)</strong> — Built ESP8266‑based home control with MQTT and mobile UI.</li>
-            <li><strong>IDP: Smart Irrigation</strong> — Soil moisture sensing, pump control, and analytics dashboard.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="achievements" class="section achievements">
-      <div class="container">
-        <h2>Achievements</h2>
-        <div class="card">
-          <ul class="list">
-            <li>Top 5 in College Hackathon for IoT Transport Solution.</li>
-            <li>Paper presentation on rainfall analysis at Tech Symposium.</li>
-            <li>Department merit award for academic excellence.</li>
-          </ul>
         </div>
       </div>
     </section>
