--- a/index.html
+++ b/index.html
@@ -96,34 +96,32 @@
         <div class="grid">
           <article class="card">
             <h3>Liver Tumor Detection</h3>
-            <div class="tags"><span>Flutter</span><span>Firebase</span><span>Dart</span></div>
+            <div class="tags"><span>MATLAB</span><span>Image Processing Toolbox</span><span>Median Filter</span><span>Butterworth Filter</span></div>
             <details>
               <summary>Objective and Details</summary>
               <ul class="list">
-                <li><strong>Objective:</strong> Digitize seat booking and live occupancy tracking.</li>
-                <li><strong>Tools:</strong> Flutter, Firebase Auth/Firestore, Google Maps API.</li>
-                <li><strong>Description:</strong> Built authentication, seat allocation logic, and driver dashboard. Implemented real‑time sync and QR validations.</li>
+                <li><strong>Objective:</strong> To detect and highlight liver tumors from medical images using image processing techniques in MATLAB.</li>
+                <li><strong>Tools:</strong> MATLAB, Image Processing Toolbox, Median Filter, Butterworth Filter, Segmentation Techniques.</li>
+                <li><strong>Description:</strong> This project uses MATLAB image processing techniques to detect and enhance liver tumors from medical images.Filtering, segmentation, and edge enhancement are applied to clearly highlight tumor regions.</li>
               </ul>
             </details>
             <div class="actions">
-              <a class="btn small" href="#" target="_blank" rel="noreferrer">Demo</a>
-              <a class="btn small" href="#" target="_blank" rel="noreferrer">GitHub</a>
+              <a class="btn small" href="https://github.com/saikarthik-ks/Liver-Tumor-Detection" target="_blank" rel="noreferrer">GitHub</a>
             </div>
           </article>
           <article class="card">
-            <h3>Analysis of Beamforming Algorithm Performance in Wireless Communication Systems</h3>
-            <div class="tags"><span>Python</span><span>Pandas</span><span>Matplotlib</span></div>
+            <h3>Analysis of Beamforming Algorithm Performance`</h3>
+            <div class="tags"><span>Python</span><span>NumPy</span><span>Matplotlib</span><span>PyTorch</span></div>
             <details>
               <summary>Objective and Details</summary>
               <ul class="list">
-                <li><strong>Objective:</strong> Analyze rainfall trends and forecast deviations.</li>
-                <li><strong>Tools:</strong> Python, Pandas, NumPy, Matplotlib.</li>
-                <li><strong>Description:</strong> Data cleaning pipeline, seasonal indices, and anomaly detection with visual dashboards.</li>
+                <li><strong>Objective:</strong> To compare beamforming algorithms for improved wireless communication performance.</li>
+                <li><strong>Tools:</strong> MATLAB, Python, NumPy, Matplotlib, PyTorch, and Communication System Toolbox.</li>
+                <li><strong>Description:</strong> This project analyzes and compares the performance of various beamforming algorithms in wireless communication systems based on metrics like BER and spectral efficiency.</li>
               </ul>
             </details>
             <div class="actions">
-              <a class="btn small" href="#" target="_blank" rel="noreferrer">Report</a>
-              <a class="btn small" href="#" target="_blank" rel="noreferrer">GitHub</a>
+              <a class="btn small" href="https://github.com/saikarthik-ks/Analysis-of-Beamforming-Algorithm" target="_blank" rel="noreferrer">GitHub</a>
             </div>
           </article>
           <article class="card">
@@ -155,25 +153,29 @@
               <li>Python</li>
               <li>C</li>
               <li>Dart</li>
+              <li>HTML</li>
+              <li>CSS</li>
               <li>JavaScript</li>
             </ul>
           </div>
           <div class="card">
-            <h3>Tools & Frameworks</h3>
+            <h3>Frameworks and Libraries</h3>
             <ul class="pill-list">
               <li>Django</li>
-              <li>Flutter</li>
-              <li>MATLAB</li>
+              <li>Pandas</li>
+              <li>NumPy</li>
+              <li>Matplotlib </li>
               <li>OpenCV</li>
             </ul>
           </div>
           <div class="card">
-            <h3>Database & Software</h3>
+            <h3>Software</h3>
             <ul class="pill-list">
               <li>MySQL</li>
-              <li>Arduino</li>
+              <li>MATLAB</li>
               <li>VS Code</li>
-              <li>Git</li>
+              <li>PyCharm</li>
+              <li>Arduino</li>
             </ul>
           </div>
         </div>
@@ -185,21 +187,21 @@
         <h2>Certifications / Courses</h2>
         <div class="grid grid-3">
           <article class="card">
-            <h3>Python for Data Science – Coursera</h3>
+            <h3>Introduction to IoT and Digital Transformation – Cisco</h3>
             <div class="actions">
-              <a class="btn small" href="assets/certificates/python-data-science.pdf" target="_blank" rel="noreferrer">View Certificate</a>
+              <a class="btn small" href="assets/certificate/iot.pdf" target="_blank" rel="noreferrer">View Certificate</a>
             </div>
           </article>
           <article class="card">
-            <h3>Embedded Systems Basics</h3>
+            <h3>Introduction to Cybersecurity - Cisco</h3>
             <div class="actions">
-              <a class="btn small" href="assets/certificates/embedded.pdf" target="_blank" rel="noreferrer">View Certificate</a>
+              <a class="btn small" href="assets/certificate/cyber.pdf" target="_blank" rel="noreferrer">View Certificate</a>
             </div>
           </article>
           <article class="card">
-            <h3>Machine Learning Foundations</h3>
+            <h3>MATLAB Onramp - Mathworks</h3>
             <div class="actions">
-              <a class="btn small" href="assets/certificates/ml-foundations.pdf" target="_blank" rel="noreferrer">View Certificate</a>
+              <a class="btn small" href="assets/certificate/Onramp.pdf" target="_blank" rel="noreferrer">View Certificate</a>
             </div>
           </article>
         </div>
@@ -220,11 +222,12 @@
             </ul>
           </div>
           <div class="card">
-            <h3>Clubs & Volunteering</h3>
+            <h3>Hobbies</h3>
             <ul class="list">
-              <li>Member, Robotics Club</li>
-              <li>Volunteer, NSS</li>
-              <li>Organizer, Dept. Tech Fest</li>
+              <li>Exploring Technologies</li>
+              <li>Cricket</li>
+              <li>Travelling</li>
+              <li>Listening Music</li>
             </ul>
           </div>
         </div>
@@ -237,9 +240,9 @@
           <h2>Contact</h2>
           <p>Want to work together or say hello? Send a message.</p>
           <ul class="contact-list">
-            <li><a href="mailto:you@example.com">you@example.com</a></li>
-            <li><a href="https://github.com/yourhandle" target="_blank" rel="noreferrer">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noreferrer">LinkedIn</a></li>
+            <li><a href="mailto:saikarthik0706@gmail.com">Mail</a></li>
+            <li><a href="https://github.com/saikarthik-ks" target="_blank" rel="noreferrer">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/saikarthikss" target="_blank" rel="noreferrer">LinkedIn</a></li>
           </ul>
         </div>
         <form id="contact-form" class="card form">
