--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
           <h2>About</h2>
           <p>I’m an Electronics and Communication Engineering student interested in embedded systems, IoT, and applied Machine Learning. I love solving real-world problems by combining hardware and software.</p>
           <p>Open to internships, industry-defined projects, and full-time opportunities.</p>
-          <ul class="contact-list">
-            <li><a href="mailto:saikarthik0706@gmail.com">saikarthik0706@gmail.com</a></li>
-            <li><a href="https://github.com/saikarthik-ks" target="_blank" rel="noreferrer">github.com/saikarthik-ks</a></li>
-            <li><a href="https://www.linkedin.com/in/saikarthikss/" target="_blank" rel="noreferrer">linkedin.com/saikarthikss</a></li>
-          </ul>
         </div>
         <div class="about-card">
           <div class="stat">
@@ -240,7 +235,7 @@
           <h2>Contact</h2>
           <p>Want to work together or say hello? Send a message.</p>
           <ul class="contact-list">
-            <li><a href="mailto:saikarthik0706@gmail.com">Mail</a></li>
+            <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new">Mail</a></li>
             <li><a href="https://github.com/saikarthik-ks" target="_blank" rel="noreferrer">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/saikarthikss" target="_blank" rel="noreferrer">LinkedIn</a></li>
           </ul>
