--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
 
   <main>
     <section id="hero" class="section hero">
-      <div class="container">
-        <h1>Hi, I'm Saikarthik</h1>
-        <p>ECE student passionate about IoT and Machine Learning. I build clean, accessible, and responsive web experiences.</p>
-        <div class="cta">
-          <a class="btn primary" href="#projects">View Projects</a>
-          <a class="btn" href="#resume">View Resume</a>
-        </div>
+  <div class="container hero-flex">
+    <div class="hero-text">
+      <h1>Hi, I'm Saikarthik</h1>
+      <p>ECE student passionate about IoT and Machine Learning. I build clean, accessible, and responsive web experiences.</p>
+      <div class="cta">
+        <a class="btn primary" href="#projects">View Projects</a>
+        <a class="btn" href="#resume">View Resume</a>
       </div>
-    </section>
+    </div>
+    <div class="hero-photo">
+      <img src="assets/profile.jpg" alt="Saikarthik" />
+    </div>
+  </div>
+</section>
+
 
     <section id="about" class="section about">
       <div class="container two-col">
